--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 Современные Агротехнологии</p>
+            <p>&copy; 2025 Современные Агротехнологии | Посещений: <span id="visit-count">354</span></p>
             <div class="footer-links">
-                <a href="#">Политика конфиденциальности</a>
-                <a href="#">Контакты</a>
+                <a href="privacy.html">Политика конфиденциальности</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </div>
     </footer>
