--- a/selection.html
+++ b/selection.html
@@ -7,67 +7,78 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <div class="header-top">
-        <h1>Современные Агротехнологии</h1>
-        <div class="user-panel">
-            <span id="user-info"></span>
-            <button id="logout-btn">Выйти</button>
+<div id="site-content">
+    <header>
+        <div class="header-top">
+            <h1>Современные Агротехнологии</h1>
+            <div class="user-panel">
+                <span id="user-info"></span>
+                <button id="logout-btn">Выйти</button>
+            </div>
         </div>
-    </div>
-    <div class="marquee-container">
-        <div class="marquee">🚜 Новости: Внедрение новых технологий повысило урожайность на 40%! • Новый сорт пшеницы устойчив к засухе! • Вертикальные фермы - будущее сельского хозяйства!</div>
-    </div>
-    <nav>
-        <ul>
-            <li class="nav-item" id="nav-home"><a href="index.html">Главная</a></li>
-            <li class="nav-item" id="nav-tech"><a href="technologies.html">Агротехнологии</a></li>
-            <li class="nav-item" id="nav-selection"><a href="selection.html">Селекция</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <section class="content-section">
-        <h2>Современная селекция растений</h2>
+        <div class="marquee-container">
+            <div class="marquee">🚜 Новости: Внедрение новых технологий повысило урожайность на 40%! • Новый сорт пшеницы устойчив к засухе! • Вертикальные фермы - будущее сельского хозяйства!</div>
+        </div>
+        <nav>
+            <ul>
+                <li class="nav-item" id="nav-home"><a href="index.html">Главная</a></li>
+                <li class="nav-item" id="nav-tech"><a href="technologies.html">Агротехнологии</a></li>
+                <li class="nav-item" id="nav-selection"><a href="selection.html">Селекция</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <div class="info-box">
-            <p>Селекция растений - это наука о создании новых и улучшении существующих сортов растений с помощью различных методов.</p>
-        </div>
+    <main class="centered-content">
+        <section class="content-section">
+            <h1 class="centered-title">Селекция растений</h1>
 
-        <div class="comparison-table">
-            <h3>Методы селекции</h3>
-            <table>
-                <thead>
-                <tr>
-                    <th>Метод</th>
-                    <th>Описание</th>
-                    <th>Примеры</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>Традиционная селекция</td>
-                    <td>Отбор и скрещивание растений</td>
-                    <td>Пшеница, рис</td>
-                </tr>
-                <tr>
-                    <td>ГМО</td>
-                    <td>Введение чужеродных генов</td>
-                    <td>Устойчивая к вредителям кукуруза</td>
-                </tr>
-                </tbody>
-            </table>
+            <article class="tech-article">
+                <h2>Традиционная селекция</h2>
+                <p>Методы отбора и скрещивания растений для улучшения сортов.</p>
+            </article>
+
+            <article class="tech-article">
+                <h2>Генетическая модификация</h2>
+                <p>Современные методы изменения генома растений.</p>
+            </article>
+
+            <div class="table-container">
+                <h2>Методы селекции</h2>
+                <table class="centered-table">
+                    <thead>
+                    <tr>
+                        <th>Метод</th>
+                        <th>Применение</th>
+                        <th>Примеры</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Гибридизация</td>
+                        <td>Скрещивание разных сортов</td>
+                        <td>Новые сорта пшеницы</td>
+                    </tr>
+                    <tr>
+                        <td>ГМО</td>
+                        <td>Введение полезных генов</td>
+                        <td>Устойчивая к вредителям кукуруза</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 Современные Агротехнологии | Посещений: <span id="visit-count">354</span></p>
+            <div class="footer-links">
+                <a href="privacy.html">Политика конфиденциальности</a>
+                <a href="contacts.html">Контакты</a>
+            </div>
         </div>
-    </section>
-</main>
-<footer>
-    <div class="footer-content">
-        <p>&copy; 2025 Современные Агротехнологии</p>
-        <div class="footer-links">
-            <a href="#">Политика конфиденциальности</a>
-            <a href="#">Контакты</a>
-        </div>
-    </div>
-</footer>
+    </footer>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
